fix footer z-index issue

--- a/src/app/crud.component.scss
+++ b/src/app/crud.component.scss
@@ -1,3 +1,6 @@
 .aside {
   margin-left: 0 !important;
 }
+.footer-buttons {
+  z-index: 9999;
+}
